2007-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Fixed a bug caused
	when using any key other than Enter to auto-complete (e.g. using a
	'(' or something).

2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: When resolving a type, include the enclosing
	  namespace in the namespace search list. Fixes bug #81865.
	* CSharpBindingCompilerManager.cs: Make sure all output is read after
	  running the compilation process. Should fix bug #82092.

2007-07-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Properly resolve type names qualified with a
	  namespace alias. Fixes bug #81999.

2007-07-12  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs (PushNewLine): If we
	just popped a single-line comment, we need to do more processing.

2007-07-11  Ankit Jain  <jankit@novell.com>

	Fix bug#82024.
	* CSharpBindingCompilerManager.cs (DoCompilation): Workaround for a bug
	in ProcessStartInfo.

2007-07-06  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (Visit::PropertyDeclaration):
	Implemented to fix bug #82020.

2007-07-05  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: (Visit::FieldReferenceExpression):
	Don't limit ourselves to just Fields and Properties. Fixes bug
	#81963.
	(Visit::IdentifierExpression): When checking of a LocalVariable is
	within bounds, use Region.BeginColumn instead of Region.EndColumn
	and swap on which LocalVariable instance we check. Fixes part of
	bug #82020.

2007-07-05  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: Sanity check that both begin and end
	are != -1 to prevent a crash.
	(Visit): When adding a typeDeclaration to the list of references,
	don't add it using the StartLocation - instead, we need to find
	the actual reference offset using StartLocation as a hint. This
	fixes bug #82017.

2007-07-03  Mike Krüger <mkrueger@novell.com> 
